--- a/settings/v2/packages/project.json
+++ b/settings/v2/packages/project.json
@@ -3,7 +3,10 @@
   "general": {
     "designResolution": {
       "width": 720,
-      "height": 1280
+      "height": 1280,
+      "fitHeight": false,
+      "fitWidth": true
     }
-  }
+  },
+  "custom_joint_texture_layouts": []
 }
